[package]
name = "gccarch"
description = "Report architecture information from GCC's backends list."
repository = "https://github.com/alilleybrinker/gccarch"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bitvec = { version = "1.0.0", default_features = false }
clap = { version = "3.1.12", default_features = false, features = ["std", "derive"] }
libc = "0.2.124"
nom = "7.1.1"
num_enum = "0.5.7"
thiserror = "1.0.30"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
